<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24sp"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/barra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/btn_mudar_tema"
                android:text="@string/app_name"
                android:textSize="32sp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/btn_mudar_tema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/li_info"
            android:layout_below="@id/barra">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/iv_clima"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/imagem_que_representa_o_clima_atual"
                    android:src="@drawable/clima_sem_dados" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_temperatura"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="96sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="24sp"
                            android:text="@string/c"
                            android:textSize="32sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_data"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?android:textColorSecondary"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tv_descricao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?android:textColorSecondary"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_forecast"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/li_info"
            android:layout_centerHorizontal="true"
            app:icon="@drawable/round_keyboard_arrow_up_24" />

        <LinearLayout
            android:id="@+id/li_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/li_menu"
            android:background="@drawable/rounded_r16"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precipitacao"
                    android:textAllCaps="true"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_precipitacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:alpha=".1"
                android:background="?android:textColorSecondary" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidade"
                    android:textAllCaps="true"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_humidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:alpha=".1"
                android:background="?android:textColorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vento"
                    android:textAllCaps="true"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_vento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/li_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_opcoes"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:icon="@drawable/round_settings_24" />
        </LinearLayout>
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
